# mE.T.F

./: README.md
app/: .gitignore  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
app/anchor/: Anchor.toml  README.md  package.json  pnpm-lock.yaml
app/anchor/programs/me-t-f/: Cargo.toml
app/anchor/programs/metf/: Cargo.toml
app/anchor/programs/metf/src/: constants.rs  error.rs  lib.rs
app/anchor/programs/metf/src/instructions/: buy_token.rs  create_bonding_model.rs  greet.rs  init_person_token.rs  initialize.rs  mod.rs  sell_token.rs
app/anchor/programs/metf/src/instructions/token_transfer_hook/: init_ex_account.rs  mod.rs  transfer_hook.rs
app/anchor/programs/metf/src/state/: bonding_curve.rs  config.rs  mod.rs  person.rs
app/anchor/programs/transfer-hook/: Cargo.toml
app/anchor/src/: index.ts  me-t-f-exports.ts  metf-exports.ts
app/anchor/tests/: me-t-f.spec.ts  metf.spec.ts
app/utils/supabase/: client.ts  server.ts  supabase.type.ts
app/web/: next.config.js  tailwind.config.js
app/web/actions/: savePersonToken.ts
app/web/app/: global.css  layout.tsx  page.tsx
app/web/app/account/: account-form.tsx  avatar.tsx  page.tsx
app/web/app/create-new-token/: page.tsx
app/web/app/login/: actions.ts  auth-form.tsx  page.tsx
app/web/app/me-t-f/: page.tsx
app/web/app/metf/: page.tsx
app/web/app/my-t-f/: page.tsx
app/web/components/: CreateTokenForm.tsx  TokenList.tsx
app/web/hooks/: usePersonTokenAccount.tsx  useSaveToken.tsx  useTokenList.tsx  useUserInfo.tsx
app/web/lib/: enum.ts
(+18 files in other folders)
